fixed: no longer possible to send empty messages add: messages now overflow

--- a/css/style.css
+++ b/css/style.css
@@ -167,6 +167,7 @@
     padding: 1.5rem 2rem;
     /* debug */
     height: 100%;
+    overflow-y: auto;
 }
 
 /* MESSAGES */
